--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ tqdm==4.62.3
 numpy==1.21.5
 python-dateutil==2.8.2
 numba==0.55.1
-pandas==1.4.0
+pandas>=1.4.3
 PyYAML==6.0
 asyncio==3.4.3
 pyecharts==1.9.1
