--- a/bitget_01.yaml
+++ b/bitget_01.yaml
@@ -6,27 +6,8 @@ windows:
     - cd ~/passivbot
   panes:
     - shell_command:
-      - python3 passivbot.py bitget_01 FLMUSDT configs/live/forager_test_like_galusdt.json -lw 1.5 -sw 1.8 -lm n -sm gs -lev 10 -cd -pt 0.3
+      - python3 passivbot.py bitget_01 OGNUSDT configs/live/forager_test_like_galusdt.json -lw 2.3333 -sw 2.3333 -lm n -sm n -lev 20 -cd -pt 0.3
     - shell_command:
-      - python3 passivbot.py bitget_01 LEVERUSDT configs/live/forager_test_like_galusdt.json -lw 1.5 -sw 1.8 -lm gs -sm n -lev 10 -cd -pt 0.3
-- window_name: bitget_01_gs_0
-  layout: even-vertical
-  shell_command_before:
-    - cd ~/passivbot
-  panes:
+      - python3 passivbot.py bitget_01 STORJUSDT configs/live/forager_test_like_galusdt.json -lw 2.3333 -sw 2.3333 -lm n -sm n -lev 20 -cd -pt 0.3
     - shell_command:
-      - python3 passivbot.py bitget_01 ARKMUSDT configs/live/forager_test_like_galusdt.json -lw 1.5 -sw 1.8 -lm gs -sm gs -lev 10 -cd -pt 0.3
-    - shell_command:
-      - python3 passivbot.py bitget_01 AVAXUSDT configs/live/forager_test_like_galusdt.json -lw 1.5 -sw 1.8 -lm gs -sm gs -lev 10 -cd -pt 0.3
-    - shell_command:
-      - python3 passivbot.py bitget_01 BTCUSDT configs/live/forager_test_like_galusdt.json -lw 1.5 -sw 1.8 -lm gs -sm gs -lev 10 -cd -pt 0.3
-    - shell_command:
-      - python3 passivbot.py bitget_01 GALUSDT configs/live/forager_test_like_galusdt.json -lw 1.5 -sw 1.8 -lm gs -sm gs -lev 10 -cd -pt 0.3
-    - shell_command:
-      - python3 passivbot.py bitget_01 HIGHUSDT configs/live/forager_test_like_galusdt.json -lw 1.5 -sw 1.8 -lm gs -sm gs -lev 10 -cd -pt 0.3
-    - shell_command:
-      - python3 passivbot.py bitget_01 LUNA2/USDT:USDT configs/live/forager_test_like_galusdt.json -lw 1.5 -sw 1.8 -lm gs -sm gs -lev 10 -cd -pt 0.3
-    - shell_command:
-      - python3 passivbot.py bitget_01 SOLUSDT configs/live/forager_test_like_galusdt.json -lw 1.5 -sw 1.8 -lm gs -sm gs -lev 10 -cd -pt 0.3
-    - shell_command:
-      - python3 passivbot.py bitget_01 XRPUSDT configs/live/forager_test_like_galusdt.json -lw 1.5 -sw 1.8 -lm gs -sm gs -lev 10 -cd -pt 0.3
+      - python3 passivbot.py bitget_01 YGGUSDT configs/live/forager_test_like_galusdt.json -lw 2.3333 -sw 2.3333 -lm n -sm n -lev 20 -cd -pt 0.3
